Json upload with metadata finished
